--- a/NautilusOS-OneFile/index.html
+++ b/NautilusOS-OneFile/index.html
@@ -2592,6 +2592,31 @@ select:focus {
     animation: slideUp 0.5s ease;
 }
 
+.taskbar-tooltip {
+    position: fixed;
+    bottom: 85px;
+    left: 50%;
+    transform: translateX(-50%);
+    background: rgba(15, 19, 21, 0.95);
+    backdrop-filter: blur(10px);
+    border: 1px solid var(--accent);
+    color: var(--text-primary);
+    padding: 0.35rem 0.6rem;
+    border-radius: 6px;
+    font-size: 0.75rem;
+    font-family: fontb;
+    pointer-events: none;
+    opacity: 0;
+    transition: opacity 0.2s ease;
+    z-index: 2000;
+    white-space: nowrap;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.4);
+}
+
+.taskbar-tooltip.active {
+    opacity: 1;
+}
+
 @keyframes slideUp {
     from {
         transform: translateX(-50%) translateY(100px);
@@ -8621,7 +8646,8 @@ select {
             switch entry, Enter <i class="fas fa-level-down-alt"></i> to select and
             boot
         </div>
-        <div id="bootCountdown" style="position: absolute; bottom: 4rem; color: var(--accent); font-size: 0.9rem; display: none;"></div>
+        <div id="bootCountdown"
+            style="position: absolute; bottom: 4rem; color: var(--accent); font-size: 0.9rem; display: none;"></div>
         <div id="bottom-text" style="position: absolute; bottom: 0.5rem; color: #888;">
             made with <i class="fa-solid fa-heart"></i> by dinguschan
         </div>
@@ -8770,8 +8796,8 @@ select {
                         onmouseover="this.style.background='rgba(125, 211, 192, 0.25)'; this.style.borderColor='rgba(125, 211, 192, 0.5)'"
                         onmouseout="this.style.background='rgba(125, 211, 192, 0.15)'; this.style.borderColor='rgba(125, 211, 192, 0.3)'">
                         <i class="fas fa-file-import"></i> Import Profile
-                        <input type="file" id="importProfileInput" accept=".nautilusprofile" onchange="importProfile(event)"
-                            style="display: none;">
+                        <input type="file" id="importProfileInput" accept=".nautilusprofile"
+                            onchange="importProfile(event)" style="display: none;">
                     </label>
 
                     <button onclick="setupStep1Next()"
@@ -9152,8 +9178,7 @@ select {
                 <div class="quick-action-desc">Close all windows</div>
             </div>
         </div>
-        <div class="quick-action-item"
-            onclick="hideQuickActions(); const link = document.createElement('a'); link.href = 'https://raw.githubusercontent.com/nautilus-os/NautilusOS/refs/heads/main/NautilusOS-OneFile/index.html'; link.download = 'NautilusOS-OneFile.html'; link.click();">
+        <div class="quick-action-item" onclick="hideQuickActions(); downloadOneFile();">
             <i class="fas fa-download"></i>
             <div class="quick-action-content">
                 <div class="quick-action-title">Get OneFile</div>
@@ -16399,7 +16424,111 @@ function showContextMenu(x, y, items) {
 
 function hideContextMenu() {
   const menu = document.getElementById("contextMenu");
-  menu.classList.remove("active");
+  if (menu) {
+    menu.style.display = "none";
+    menu.classList.remove("active");
+  }
+}
+
+// Global click/mousedown listener for context menu dismissal
+window.addEventListener("mousedown", (e) => {
+  const menu = document.getElementById("contextMenu");
+  if (menu && !menu.contains(e.target)) {
+    hideContextMenu();
+  }
+});
+
+// Full Name mapping for tooltips
+const APP_NAMES = {
+  files: "Files",
+  terminal: "Terminal",
+  settings: "Settings",
+  editor: "Text Editor",
+  music: "Music",
+  photos: "Photos",
+  help: "Help",
+  whatsnew: "What's New",
+  appstore: "App Store",
+  calculator: "Calculator",
+  cloaking: "Cloaking",
+  achievements: "Achievements",
+  browser: "Nautilus Browser",
+  "ai-snake": "AI Snake Learning",
+  "nautilus-ai": "Nautilus AI Assistant",
+  python: "Python Interpreter",
+  "web-app-creator": "Web App Creator",
+  about: "About NautilusOS"
+};
+
+function initTaskbarTooltips() {
+  const taskbarIcons = document.querySelectorAll(".taskbar-icon[data-app], .system-tray .taskbar-icon");
+  const tooltip = document.createElement("div");
+  tooltip.className = "taskbar-tooltip";
+  document.body.appendChild(tooltip);
+
+  taskbarIcons.forEach(icon => {
+    icon.addEventListener("mouseenter", (e) => {
+      // Clear title immediately so browser tooltip doesn't show
+      if (icon.hasAttribute("title")) {
+        icon.setAttribute("data-old-title", icon.getAttribute("title"));
+        icon.removeAttribute("title");
+      }
+
+      hoverTimeout = setTimeout(() => {
+        const appName = icon.getAttribute("data-app");
+        const title = APP_NAMES[appName] || icon.getAttribute("data-old-title");
+
+        if (!title) return;
+
+        tooltip.innerText = title;
+        tooltip.classList.add("active");
+
+        const rect = icon.getBoundingClientRect();
+        tooltip.style.left = `${rect.left + rect.width / 2}px`;
+      }, 1000);
+    });
+
+    icon.addEventListener("mouseleave", () => {
+      clearTimeout(hoverTimeout);
+      tooltip.classList.remove("active");
+      if (icon.hasAttribute("data-old-title")) {
+        icon.setAttribute("title", icon.getAttribute("data-old-title"));
+        icon.removeAttribute("data-old-title");
+      }
+    });
+
+    icon.addEventListener("click", () => {
+      clearTimeout(hoverTimeout);
+      tooltip.classList.remove("active");
+      if (icon.hasAttribute("data-old-title")) {
+        icon.setAttribute("title", icon.getAttribute("data-old-title"));
+        icon.removeAttribute("data-old-title");
+      }
+    });
+  });
+}
+
+async function downloadOneFile() {
+  try {
+    showToast("Preparing download...", "fa-download");
+    const response = await fetch('https://raw.githubusercontent.com/nautilus-os/NautilusOS/refs/heads/main/NautilusOS-OneFile/index.html');
+    if (!response.ok) throw new Error("Network response was not ok");
+
+    const blob = await response.blob();
+    const url = window.URL.createObjectURL(blob);
+    const a = document.createElement('a');
+    a.href = url;
+    a.download = 'NautilusOS-OneFile.html';
+    document.body.appendChild(a);
+    a.click();
+    window.URL.revokeObjectURL(url);
+    document.body.removeChild(a);
+    showToast("Downloading OneFile...", "fa-check-circle");
+  } catch (error) {
+    console.error("Download failed:", error);
+    showToast("Download failed! Opening link instead.", "fa-exclamation-triangle");
+    window.open('https://raw.githubusercontent.com/nautilus-os/NautilusOS/refs/heads/main/NautilusOS-OneFile/index.html', '_blank');
+  }
 }
 
 function refreshDesktop() {
@@ -26876,6 +27005,8 @@ document.addEventListener('DOMContentLoaded', function () {
       }
     }
   });
+
+  initTaskbarTooltips();
 });
 
 // Proxy Settings Helpers
